# eumas2026

./: .gitignore  AGENTS.md  CLAUDE.md  Evaluation LLMs.md  README.md  Validation Goals.md
Agents/: run_agents.sh
Agents/coala_agent/: config.json  config_loader.py  llm.py  main.py  pyproject.toml  setup_agent.py  setup_human.py
Agents/coala_agent/coala/: body.py  coala.py  pm.py  usage_meter.py
Agents/coala_agent/coala/tools/: mcp_stdio_tool.py  mcp_streaming_http_tool.py  utcp_tool.py
Agents/coala_agent/ontologies/: HMAS.py
Agents/jason_agent/: README.md  build.gradle  logging.properties  main.jcm
Agents/soar_agent/: README.md  build.gradle  settings.gradle
Environment/: run_environment.sh
Environment/InteractionPlatform/: annotation_creation.py  app.py  config.json  environment.py  evaluation.py  form.py  form_registry.py  form_template.py  generation_creation.py  index.html  pyproject.toml  transformation_creation.py  utils.py
Environment/InteractionPlatform/components/: annotation.py  generation.py  profile.py  selection.py  signifier.py  transformation.py
Environment/InteractionPlatform/ontologies/: BDIOnt.py  JSONSchema.py  LLMOnt.py  LabOnt.py  SoarOnt.py
Environment/InteractionPlatform/registries/: annotation_registry.py  profile_registry.py
Environment/InteractionPlatform/tests/: test_setup_app.py
Environment/Lab/: config.json  proxy.py  pyproject.toml  run.sh  test_proxy.sh
Environment/Lab/ontologies/: HMAS.py  LabOnt.py
Environment/Lab/simulator/: Dockerfile  README.md  simulator_flow.json
Environment/mcp-server/: main.py  pyproject.toml
Environment/mcp-server/ontologies/: HMAS.py
ontologies/: bdi.ttl  hmas-extension.ttl  lab.ttl  llm.ttl  soar.ttl
(+23 files in other folders)
