[project]
name = "llm-cognitive-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "rdflib>=7.6.0",
    "langchain==1.2.10",
    "langgraph>=1.0.8",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.9",
    "mcp[cli]>=1.26.0",
    "a2a-sdk[all]>=0.3.22",
    "utcp>=1.1.2",
    "utcp-http>=1.1.1",
    "langchain-classic>=1.0.1",
    "fastmcp>=3.2.4"
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
