[project]
name = "sempy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "fastmcp>=2.12.4",
    "flask==3.1.0",
    "html5rdf==1.2.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.14",
    "markupsafe==3.0.2",
    "owlrl==7.1.3",
    "packaging==25.0",
    "prettytable==3.16.0",
    "pyparsing==3.0.9",
    "pyshacl==0.30.1",
    "rdflib==7.1.4",
    "requests==2.32.3",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
